added V-VM binding by data templates

--- a/Customers/CustomerListView.xaml
+++ b/Customers/CustomerListView.xaml
@@ -5,13 +5,55 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:cust="clr-namespace:MVVMHookupDemo.Customers"
              xmlns:local="clr-namespace:MVVMHookupDemo"
+             xmlns:data="clr-namespace:Zza.Data;assembly=Zza.Data"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300"
-             local:ViewModelLocator.AutoWireViewModel="True">
-    <!--<UserControl.DataContext>
+             d:DesignHeight="300" d:DesignWidth="300">
+             <!--local:ViewModelLocator.AutoWireViewModel="True">-->
+    <UserControl.DataContext>
         <cust:CustomerListViewModel/>
-    </UserControl.DataContext>-->
+    </UserControl.DataContext>
+    <UserControl.Resources>
+        <DataTemplate DataType="{x:Type data:Customer}">
+            <StackPanel>
+                <TextBlock Text="{Binding FirstName}" />
+                <TextBlock Text="{Binding LastName}" />
+                <TextBlock Text="{Binding Phone}" />
+            </StackPanel>
+        </DataTemplate>
+    </UserControl.Resources>
     <Grid>
-        <DataGrid ItemsSource="{Binding Customers}" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Button Content="Delete"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Width="75"/>
+            <DataGrid x:Name="customerDataGrid"
+                  AutoGenerateColumns="False"
+                  EnableRowVirtualization="True"
+                  ItemsSource="{Binding Customers}"
+                  RowDetailsVisibilityMode="VisibleWhenSelected"
+                  Grid.Row="1">
+            <DataGrid.Columns>
+                <DataGridTextColumn x:Name="firstNameColumn"
+                                    Binding="{Binding FirstName}"
+                                    Header="First Name"
+                                    Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="lastNameColumn"
+                                    Binding="{Binding LastName}"
+                                    Header="Last Name"
+                                    Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="phoneColumn"
+                                    Binding="{Binding Phone}"
+                                    Header="Phone"
+                                    Width="SizeToHeader"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <ListBox Grid.Row="1"
+                 ItemsSource="{Binding Customers}"/>
+                 <!--ItemTemplate="{StaticResource CustomerTemplate}"/>-->
     </Grid>
 </UserControl>
