--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,10 +2,19 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Customers="clr-namespace:MVVMHookupDemo.Customers"
+        xmlns:local="clr-namespace:MVVMHookupDemo"
         Title="MainWindow" Height="416" Width="525">
-    <Grid>
-        <Customers:CustomerListView Margin="0,0,0,149"/>
-        <Customers:CustomerDetailView HorizontalAlignment="Left" Height="73" Margin="10,260,0,0" VerticalAlignment="Top" Width="248"/>
-
+    <Window.DataContext>
+        <local:MainWindowViewModel/>
+    </Window.DataContext>
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type Customers:CustomerListViewModel}">
+            <Customers:CustomerListView />
+        </DataTemplate>
+    </Window.Resources>
+        <Grid>
+        <ContentControl Content="{Binding CurrentViewModel}"/>
+        <!--<Customers:CustomerListView Margin="0"/>-->
+        <!--<Customers:CustomerDetailView HorizontalAlignment="Left" Height="73" Margin="10,260,0,0" VerticalAlignment="Top" Width="248"/>-->
     </Grid>
 </Window>
