--- a/Customers/CustomerListView.xaml
+++ b/Customers/CustomerListView.xaml
@@ -8,7 +8,7 @@
              xmlns:data="clr-namespace:Zza.Data;assembly=Zza.Data"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-             <!--local:ViewModelLocator.AutoWireViewModel="True">-->
+    <!--local:ViewModelLocator.AutoWireViewModel="True">-->
     <UserControl.DataContext>
         <cust:CustomerListViewModel/>
     </UserControl.DataContext>
@@ -28,14 +28,16 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Button Content="Delete"
+                Command="{Binding DeleteCommand}"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Width="75"/>
-            <DataGrid x:Name="customerDataGrid"
+        <DataGrid x:Name="customerDataGrid"
                   AutoGenerateColumns="False"
                   EnableRowVirtualization="True"
+                  SelectedItem="{Binding SelectedCustomer}"
                   ItemsSource="{Binding Customers}"
-                  RowDetailsVisibilityMode="VisibleWhenSelected"
+                        RowDetailsVisibilityMode="VisibleWhenSelected"
                   Grid.Row="1">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="firstNameColumn"
@@ -49,11 +51,11 @@
                 <DataGridTextColumn x:Name="phoneColumn"
                                     Binding="{Binding Phone}"
                                     Header="Phone"
-                                    Width="SizeToHeader"/>
+                                    Width="Auto"/>
             </DataGrid.Columns>
         </DataGrid>
-        <ListBox Grid.Row="1"
+        <ListBox Grid.Row="2"
                  ItemsSource="{Binding Customers}"/>
-                 <!--ItemTemplate="{StaticResource CustomerTemplate}"/>-->
+        <!--ItemTemplate="{StaticResource CustomerTemplate}"/>-->
     </Grid>
 </UserControl>
