--- a/Customers/CustomerListView.xaml
+++ b/Customers/CustomerListView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MVVMHookupDemo.Customers.CustomerListView"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,12 +6,11 @@
              xmlns:cust="clr-namespace:MVVMHookupDemo.Customers"
              xmlns:local="clr-namespace:MVVMHookupDemo"
              xmlns:data="clr-namespace:Zza.Data;assembly=Zza.Data"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions" x:Class="MVVMHookupDemo.Customers.CustomerListView"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <!--local:ViewModelLocator.AutoWireViewModel="True">-->
-    <UserControl.DataContext>
-        <cust:CustomerListViewModel/>
-    </UserControl.DataContext>
+             d:DesignHeight="300" d:DesignWidth="300"
+             >
+             <!--local:MvvmBehaviors.LoadedMethodName="LoadCustomers">-->
     <UserControl.Resources>
         <DataTemplate DataType="{x:Type data:Customer}">
             <StackPanel>
@@ -21,41 +20,60 @@
             </StackPanel>
         </DataTemplate>
     </UserControl.Resources>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Button Content="Delete"
-                Command="{Binding DeleteCommand}"
+    <!--local:ViewModelLocator.AutoWireViewModel="True">-->
+    <UserControl.InputBindings>
+        <KeyBinding Key="D"
+                    Modifiers="Control"
+                    Command="{Binding DeleteCommand}"/>
+    </UserControl.InputBindings>
+    <UserControl.DataContext>
+        <cust:CustomerListViewModel/>
+    </UserControl.DataContext>
+	<i:Interaction.Triggers>
+		<i:EventTrigger>
+			<ei:CallMethodAction TargetObject="{Binding Mode=OneWay}" MethodName="LoadCustomers"/>
+		</i:EventTrigger>
+	</i:Interaction.Triggers>
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="2*"/>
+			<RowDefinition Height="*"/>
+		</Grid.RowDefinitions>
+		<Button Content="Delete"
+			Command="{Binding DeleteCommand}"
+			HorizontalAlignment="Left"
+			VerticalAlignment="Top"
+			Width="75"/>
+        <Button Content="Change customer"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
-                Width="75"/>
-        <DataGrid x:Name="customerDataGrid"
-                  AutoGenerateColumns="False"
-                  EnableRowVirtualization="True"
-                  SelectedItem="{Binding SelectedCustomer}"
-                  ItemsSource="{Binding Customers}"
-                        RowDetailsVisibilityMode="VisibleWhenSelected"
-                  Grid.Row="1">
-            <DataGrid.Columns>
-                <DataGridTextColumn x:Name="firstNameColumn"
-                                    Binding="{Binding FirstName}"
-                                    Header="First Name"
-                                    Width="SizeToHeader"/>
-                <DataGridTextColumn x:Name="lastNameColumn"
-                                    Binding="{Binding LastName}"
-                                    Header="Last Name"
-                                    Width="SizeToHeader"/>
-                <DataGridTextColumn x:Name="phoneColumn"
-                                    Binding="{Binding Phone}"
-                                    Header="Phone"
-                                    Width="Auto"/>
-            </DataGrid.Columns>
-        </DataGrid>
-        <ListBox Grid.Row="2"
-                 ItemsSource="{Binding Customers}"/>
-        <!--ItemTemplate="{StaticResource CustomerTemplate}"/>-->
-    </Grid>
+                Margin="80,0,0,0"
+                Click="OnChangeCustomer" />
+		<DataGrid x:Name="customerDataGrid"
+			AutoGenerateColumns="False"
+			EnableRowVirtualization="True"
+			SelectedItem="{Binding SelectedCustomer}"
+			ItemsSource="{Binding Customers}"
+			RowDetailsVisibilityMode="VisibleWhenSelected"
+			Grid.Row="1">
+			<DataGrid.Columns>
+				<DataGridTextColumn x:Name="firstNameColumn"
+					Binding="{Binding FirstName}"
+					Header="First Name"
+					Width="SizeToHeader"/>
+				<DataGridTextColumn x:Name="lastNameColumn"
+					Binding="{Binding LastName}"
+					Header="Last Name"
+					Width="SizeToHeader"/>
+				<DataGridTextColumn x:Name="phoneColumn"
+					Binding="{Binding Phone}"
+					Header="Phone"
+					Width="Auto"/>
+			</DataGrid.Columns>
+		</DataGrid>
+		<ListBox Grid.Row="2"
+			ItemsSource="{Binding Customers}"/>
+		<!--ItemTemplate="{StaticResource CustomerTemplate}"/>-->
+	</Grid>
 </UserControl>
